@@ -13,6 +13,8 @@ import java.sql.Timestamp;
 import java.time.ZoneId;
 import java.util.Arrays;
 import java.util.Calendar;
+import java.util.Collections;
+import java.util.List;
 import java.util.TimeZone;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -24,14 +26,14 @@ import static org.junit.jupiter.api.Assertions.*;
 class ProtoConverterTemporalTest {
 
     @Test
-    void testTimestamp_withoutCalendar_usesSystemDefault() {
+    void testTimestampWithoutCalendarUsesSystemDefault() {
         // When no Calendar is provided, system default timezone should be used
         Timestamp timestamp = Timestamp.valueOf("2024-11-02 14:30:45.123456789");
         
         Parameter param = Parameter.builder()
             .index(1)
             .type(ParameterType.TIMESTAMP)
-            .values(Arrays.asList(timestamp))
+            .values(List.of(timestamp))
             .build();
         
         // Convert to proto
@@ -39,7 +41,7 @@ class ProtoConverterTemporalTest {
         assertNotNull(proto);
         assertEquals(1, proto.getIndex());
         assertEquals(1, proto.getValuesCount());
-        assertTrue(proto.getValues(0).getValueCase() == ParameterValue.ValueCase.TIMESTAMP_VALUE);
+        assertSame(proto.getValues(0).getValueCase(), ParameterValue.ValueCase.TIMESTAMP_VALUE);
         
         // Verify timezone is set (should be system default)
         TimestampWithZone tsWithZone = proto.getValues(0).getTimestampValue();
@@ -59,7 +61,7 @@ class ProtoConverterTemporalTest {
     }
     
     @Test
-    void testTimestamp_withCalendar() {
+    void testTimestampWithCalendar() {
         // When Calendar is provided, its timezone should be used
         Timestamp timestamp = Timestamp.valueOf("2024-11-02 14:30:45.123456789");
         Calendar calendar = Calendar.getInstance(TimeZone.getTimeZone("America/New_York"));
@@ -73,7 +75,7 @@ class ProtoConverterTemporalTest {
         // Convert to proto
         ParameterProto proto = ProtoConverter.toProto(param);
         assertNotNull(proto);
-        assertTrue(proto.getValues(0).getValueCase() == ParameterValue.ValueCase.TIMESTAMP_VALUE);
+        assertSame(proto.getValues(0).getValueCase(), ParameterValue.ValueCase.TIMESTAMP_VALUE);
         
         // Verify timezone from calendar is used
         TimestampWithZone tsWithZone = proto.getValues(0).getTimestampValue();
@@ -86,7 +88,7 @@ class ProtoConverterTemporalTest {
     }
     
     @Test
-    void testTimestamp_withOffsetTimezone() {
+    void testTimestampWithOffsetTimezone() {
         Timestamp timestamp = Timestamp.valueOf("2024-11-02 14:30:45.123456789");
         Calendar calendar = Calendar.getInstance(TimeZone.getTimeZone("GMT+02:00"));
         
@@ -100,8 +102,8 @@ class ProtoConverterTemporalTest {
         TimestampWithZone tsWithZone = proto.getValues(0).getTimestampValue();
         
         // Should accept offset timezone
-        assertTrue(tsWithZone.getTimezone().contains("02:00") || 
-                   tsWithZone.getTimezone().equals("GMT+02:00"));
+        assertTrue(tsWithZone.getTimezone().contains("02:00") 
+                   || tsWithZone.getTimezone().equals("GMT+02:00"));
         
         // Should convert back successfully
         Parameter result = ProtoConverter.fromProto(proto);
@@ -110,11 +112,11 @@ class ProtoConverterTemporalTest {
     }
     
     @Test
-    void testTimestamp_null() {
+    void testTimestampNull() {
         Parameter param = Parameter.builder()
             .index(1)
             .type(ParameterType.TIMESTAMP)
-            .values(Arrays.asList((Object) null))
+            .values(Collections.singletonList(null))
             .build();
         
         ParameterProto proto = ProtoConverter.toProto(param);
@@ -125,20 +127,20 @@ class ProtoConverterTemporalTest {
     }
     
     @Test
-    void testDate_roundTrip() {
+    void testDateRoundTrip() {
         Date date = Date.valueOf("2024-11-02");
         
         Parameter param = Parameter.builder()
             .index(1)
             .type(ParameterType.DATE)
-            .values(Arrays.asList(date))
+            .values(Collections.singletonList(date))
             .build();
         
         // Convert to proto
         ParameterProto proto = ProtoConverter.toProto(param);
         assertNotNull(proto);
         assertEquals(1, proto.getValuesCount());
-        assertTrue(proto.getValues(0).getValueCase() == ParameterValue.ValueCase.DATE_VALUE);
+        assertSame(proto.getValues(0).getValueCase(), ParameterValue.ValueCase.DATE_VALUE);
         
         // Verify date values
         com.google.type.Date protoDate = proto.getValues(0).getDateValue();
@@ -154,11 +156,11 @@ class ProtoConverterTemporalTest {
     }
     
     @Test
-    void testDate_null() {
+    void testDateNull() {
         Parameter param = Parameter.builder()
             .index(1)
             .type(ParameterType.DATE)
-            .values(Arrays.asList((Object) null))
+            .values(Collections.singletonList(null))
             .build();
         
         ParameterProto proto = ProtoConverter.toProto(param);
@@ -167,20 +169,20 @@ class ProtoConverterTemporalTest {
     }
     
     @Test
-    void testTime_roundTrip() {
+    void testTimeRoundTrip() {
         Time time = Time.valueOf("14:30:45");
         
         Parameter param = Parameter.builder()
             .index(1)
             .type(ParameterType.TIME)
-            .values(Arrays.asList(time))
+            .values(List.of(time))
             .build();
         
         // Convert to proto
         ParameterProto proto = ProtoConverter.toProto(param);
         assertNotNull(proto);
         assertEquals(1, proto.getValuesCount());
-        assertTrue(proto.getValues(0).getValueCase() == ParameterValue.ValueCase.TIME_VALUE);
+        assertSame(proto.getValues(0).getValueCase(), ParameterValue.ValueCase.TIME_VALUE);
         
         // Verify time values
         com.google.type.TimeOfDay protoTime = proto.getValues(0).getTimeValue();
@@ -196,11 +198,11 @@ class ProtoConverterTemporalTest {
     }
     
     @Test
-    void testTime_null() {
+    void testTimeNull() {
         Parameter param = Parameter.builder()
             .index(1)
             .type(ParameterType.TIME)
-            .values(Arrays.asList((Object) null))
+            .values(Collections.singletonList(null))
             .build();
         
         ParameterProto proto = ProtoConverter.toProto(param);
@@ -209,7 +211,7 @@ class ProtoConverterTemporalTest {
     }
     
     @Test
-    void testMultipleParameters_mixedTypes() {
+    void testMultipleParametersMixedTypes() {
         // Test multiple parameters including temporal types
         Timestamp timestamp = Timestamp.valueOf("2024-11-02 14:30:45.123456789");
         Date date = Date.valueOf("2024-11-02");
@@ -218,19 +220,19 @@ class ProtoConverterTemporalTest {
         Parameter timestampParam = Parameter.builder()
             .index(1)
             .type(ParameterType.TIMESTAMP)
-            .values(Arrays.asList(timestamp))
+            .values(List.of(timestamp))
             .build();
         
         Parameter dateParam = Parameter.builder()
             .index(2)
             .type(ParameterType.DATE)
-            .values(Arrays.asList(date))
+            .values(Collections.singletonList(date))
             .build();
         
         Parameter timeParam = Parameter.builder()
             .index(3)
             .type(ParameterType.TIME)
-            .values(Arrays.asList(time))
+            .values(List.of(time))
             .build();
         
         // Convert all to proto
@@ -239,9 +241,9 @@ class ProtoConverterTemporalTest {
         ParameterProto proto3 = ProtoConverter.toProto(timeParam);
         
         // Verify all have correct typed values
-        assertTrue(proto1.getValues(0).getValueCase() == ParameterValue.ValueCase.TIMESTAMP_VALUE);
-        assertTrue(proto2.getValues(0).getValueCase() == ParameterValue.ValueCase.DATE_VALUE);
-        assertTrue(proto3.getValues(0).getValueCase() == ParameterValue.ValueCase.TIME_VALUE);
+        assertSame(proto1.getValues(0).getValueCase(), ParameterValue.ValueCase.TIMESTAMP_VALUE);
+        assertSame(proto2.getValues(0).getValueCase(), ParameterValue.ValueCase.DATE_VALUE);
+        assertSame(proto3.getValues(0).getValueCase(), ParameterValue.ValueCase.TIME_VALUE);
         
         // Convert back
         Parameter result1 = ProtoConverter.fromProto(proto1);
@@ -250,6 +252,6 @@ class ProtoConverterTemporalTest {
         
         assertEquals(timestamp, result1.getValues().get(0));
         assertEquals(date, result2.getValues().get(0));
-        assertEquals(time.toString(), ((Time) result3.getValues().get(0)).toString());
+        assertEquals(time.toString(), result3.getValues().get(0).toString());
     }
 }
